# CSCI5527_Final_Project

./: .gitignore  README.md  evaluate.py  metrics_summary.txt  scene_classifier_node.py
data/: val_labels.npy
launch/: scene_classifier.launch.py
scene_classifier/: CMakeLists.txt  generate_data.py  metrics_projection.txt  model.py  package.xml  train.py
scene_classifier/checkpoints/: best_model.pth
scene_classifier/data/: test_labels.npy  train_labels.npy
scene_classifier/scene_classifier/: nav2_context_manager_node.py
